--- a/10-10.html
+++ b/10-10.html
@@ -34,3 +34,14 @@ function printNavigator() {
 	var div = document.getElementById("div");
 	div.innerHTML = text;
 }
+</script>
+</head>
+<body onload="printNavigator()">
+<h3>브라우저에 대한 정보 출력</h3>
+아래에 이 브라우저에 관한 여러 정보를 출력합니다.</body>
+<hr>
+<p>
+	<div id ="div"></div>
+</p>
+</body>
+</html>
