--- a/9-19.html
+++ b/9-19.html
@@ -16,9 +16,9 @@ function drawImage() {
 과일을 선택하면 이미지가 출력됩니다.<p>
 <form>
 <select id="fruits" onchange="drawImage()">
-	<option value="images/strawberry.png">딸기
-	<option value="images/banana.png" selected>바나나
-	<option value="images/apple.png">사과
+	<option value="media/strawberry.png">딸기
+	<option value="media/banana.png" selected>바나나
+	<option value="media/apple.png">사과
 </select>
 <img id="fruitimage" src="images/banana.gif" alt="">
 </form>
